Repair broken width on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,7 @@ a {
 .downloadable h1 {
   display: none;
 }
+
+.downloadable {
+  width: 80vw;
+}
